data/derived/comb/progs/unify/prog8776.ml.out
Characters 143-155:
  then matchHeads(loseTail t)
                 ^^^^^^^^^^^^
Error: This expression has type char list
       but an expression was expected of type string
